--- a/download.html
+++ b/download.html
@@ -455,77 +455,77 @@
 
     <tr><td><em><a href="http://wiki.nmr-relax.com/Relax_4.0.1">Version 4.0.1</a> (2015-12-14)</em></td></tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/4.0.1/relax-4.0.1.GNU-Linux.i686.tar.bz2" title="relax">relax-4.0.1.GNU-Linux.i686.tar.bz2</a></td>
+      <td><a href="download_request.html" title="relax">relax-4.0.1.GNU-Linux.i686.tar.bz2</a></td>
       <td><tt><small>463a0e914cff318bb5b25da65fcc41c5</small></tt></td>
-      <td><a href="http://download.gna.org/relax/4.0.1/relax-4.0.1.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td><a href="download_request.html" title="relax GPG signature">signature</a></td>
       <td align="right">105,787,595</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/4.0.1/relax-4.0.1.GNU-Linux.x86_64.tar.bz2" title="relax">relax-4.0.1.GNU-Linux.x86_64.tar.bz2</a></td>
+      <td><a href="download_request.html" title="relax">relax-4.0.1.GNU-Linux.x86_64.tar.bz2</a></td>
       <td><tt><small>9c09da031e0346a1f46c78a8aa4c2265</small></tt></td>
-      <td><a href="http://download.gna.org/relax/4.0.1/relax-4.0.1.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td><a href="download_request.html" title="relax GPG signature">signature</a></td>
       <td align="right">106,000,392</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/4.0.1/relax-4.0.1.Win32.zip" title="relax">relax-4.0.1.Win32.zip</a></td>
+      <td><a href="download_request.html" title="relax">relax-4.0.1.Win32.zip</a></td>
       <td><tt><small>1322eaa493fc8d6af79044de3e3e7789</small></tt></td>
-      <td><a href="http://download.gna.org/relax/4.0.1/relax-4.0.1.Win32.zip.sig" title="relax GPG signature">signature</a></td>
+      <td><a href="download_request.html" title="relax GPG signature">signature</a></td>
       <td align="right">111,856,780</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/4.0.1/relax-4.0.1.Darwin.dmg" title="relax">relax-4.0.1.Darwin.dmg</a></td>
+      <td><a href="download_request.html" title="relax">relax-4.0.1.Darwin.dmg</a></td>
       <td><tt><small>ff282d948816f3bbedc650642b00b288</small></tt></td>
-      <td><a href="http://download.gna.org/relax/4.0.1/relax-4.0.1.Darwin.dmg.sig" title="relax GPG signature">signature</a></td>
+      <td><a href="download_request.html" title="relax GPG signature">signature</a></td>
       <td align="right">333,632,768</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/4.0.1/relax-4.0.1.src.tar.bz2" title="relax">relax-4.0.1.src.tar.bz2</a></td>
+      <td><a href="download_request.html" title="relax">relax-4.0.1.src.tar.bz2</a></td>
       <td><tt><small>7c07917f22169f4afc76b5e362bb2112</small></tt></td>
-      <td><a href="http://download.gna.org/relax/4.0.1/relax-4.0.1.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td><a href="download_request.html" title="relax GPG signature">signature</a></td>
       <td align="right">105,985,056</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/4.0.1/relax-4.0.1.src.zip" title="relax">relax-4.0.1.src.zip</a></td>
+      <td><a href="download_request.html" title="relax">relax-4.0.1.src.zip</a></td>
       <td><tt><small>8d942c8de7415f56ba35948129144f3c</small></tt></td>
-      <td><a href="http://download.gna.org/relax/4.0.1/relax-4.0.1.src.zip.sig" title="relax GPG signature">signature</a></td>
+      <td><a href="download_request.html" title="relax GPG signature">signature</a></td>
       <td align="right">111,977,790</td>
     </tr>
 
     <tr><td><em><a href="http://wiki.nmr-relax.com/Relax_4.0.0">Version 4.0.0</a> (2015-10-07)</em></td></tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/4.0.0/relax-4.0.0.GNU-Linux.i686.tar.bz2" title="relax">relax-4.0.0.GNU-Linux.i686.tar.bz2</a></td>
+      <td><a href="download_request.html" title="relax">relax-4.0.0.GNU-Linux.i686.tar.bz2</a></td>
       <td><tt><small>79de39ad88175deb13e6893d6b43d170</small></tt></td>
-      <td><a href="http://download.gna.org/relax/4.0.0/relax-4.0.0.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td><a href="download_request.html" title="relax GPG signature">signature</a></td>
       <td align="right">105,515,294</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/4.0.0/relax-4.0.0.GNU-Linux.x86_64.tar.bz2" title="relax">relax-4.0.0.GNU-Linux.x86_64.tar.bz2</a></td>
+      <td><a href="download_request.html" title="relax">relax-4.0.0.GNU-Linux.x86_64.tar.bz2</a></td>
       <td><tt><small>88e583699725277b280c82eefdf15c34</small></tt></td>
-      <td><a href="http://download.gna.org/relax/4.0.0/relax-4.0.0.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td><a href="download_request.html" title="relax GPG signature">signature</a></td>
       <td align="right">105,655,707</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/4.0.0/relax-4.0.0.Win32.zip" title="relax">relax-4.0.0.Win32.zip</a></td>
+      <td><a href="download_request.html" title="relax">relax-4.0.0.Win32.zip</a></td>
       <td><tt><small>0fb40b9164361ee37cc0981bc896f043</small></tt></td>
-      <td><a href="http://download.gna.org/relax/4.0.0/relax-4.0.0.Win32.zip.sig" title="relax GPG signature">signature</a></td>
+      <td><a href="download_request.html" title="relax GPG signature">signature</a></td>
       <td align="right">111,557,167</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/4.0.0/relax-4.0.0.Darwin.dmg" title="relax">relax-4.0.0.Darwin.dmg</a></td>
+      <td><a href="download_request.html" title="relax">relax-4.0.0.Darwin.dmg</a></td>
       <td><tt><small>d894c25abc73a6ac175cb1bf191d5cea</small></tt></td>
-      <td><a href="http://download.gna.org/relax/4.0.0/relax-4.0.0.Darwin.dmg.sig" title="relax GPG signature">signature</a></td>
+      <td><a href="download_request.html" title="relax GPG signature">signature</a></td>
       <td align="right">334,077,536</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/4.0.0/relax-4.0.0.src.tar.bz2" title="relax">relax-4.0.0.src.tar.bz2</a></td>
+      <td><a href="download_request.html" title="relax">relax-4.0.0.src.tar.bz2</a></td>
       <td><tt><small>8820a6deb987017b072e49378b5f6f92</small></tt></td>
-      <td><a href="http://download.gna.org/relax/4.0.0/relax-4.0.0.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td><a href="download_request.html" title="relax GPG signature">signature</a></td>
       <td align="right">105,659,752</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/4.0.0/relax-4.0.0.src.zip" title="relax">relax-4.0.0.src.zip</a></td>
+      <td><a href="download_request.html" title="relax">relax-4.0.0.src.zip</a></td>
       <td><tt><small>3ce9533638cd09305bc156c843448c48</small></tt></td>
-      <td><a href="http://download.gna.org/relax/4.0.0/relax-4.0.0.src.zip.sig" title="relax GPG signature">signature</a></td>
+      <td><a href="download_request.html" title="relax GPG signature">signature</a></td>
       <td align="right">111,676,490</td>
     </tr>
   </tbody>
