--- a/screenshots.html
+++ b/screenshots.html
@@ -47,28 +47,24 @@
 
     <p>The following are screenshots of <a href="download.html#All_releases">relax 1.3.14</a> in the <a href="features.html#UI">prompt UI mode</a> on different operating systems:</p>
 
-     <table class="screenshot_table">
-      <tr>
-       <td class="screenshot_td">
-        <a href="images/screenshots/full/prompt_ui_mageia1.png"><img src="images/screenshots/small/prompt_ui_mageia1.png" alt="Screenshot of the prompt user inteface (UI) running on GNU/Linux (Mageia 1) of the program relax (software for NMR dynamics analyses, specifically: Model-free, NMR relaxation (R1, R2, NOE), reduced spectral density mapping, N-state models, frame order theory)."/></a><br/>GNU/Linux - <a href="http://www.mageia.org">Mageia 1</a> (konsole)
-       </td>
-       <td class="screenshot_td">
-        <a href="images/screenshots/full/prompt_ui_win2000.png"><img src="images/screenshots/small/prompt_ui_win2000.png" alt="Screenshot of the prompt user inteface (UI) running on MS Windows 2000 of the program relax (software for NMR dynamics analyses, specifically: Model-free, NMR relaxation (R1, R2, NOE), reduced spectral density mapping, N-state models, frame order theory)."/></a><br/>MS Windows 2000 (cmd)
-       </td>
-       <td class="screenshot_td">
-        <a href="images/screenshots/full/prompt_ui_win_vista.png"><img src="images/screenshots/small/prompt_ui_win_vista.png" alt="Screenshot of the prompt user inteface (UI) running on MS Windows Vista of the program relax (software for NMR dynamics analyses, specifically: Model-free, NMR relaxation (R1, R2, NOE), reduced spectral density mapping, N-state models, frame order theory)."/></a><br/>MS Windows Vista (powershell)
-       </td>
-      </tr>
-      <tr>
-       <td class="screenshot_td">
-        <a href="images/screenshots/full/prompt_ui_mac_10_6.png"><img src="images/screenshots/small/prompt_ui_mac_10_6.png" alt="Screenshot of the prompt user inteface (UI) running on Mac OS X 10.6 Snow Leopard of the program relax (software for NMR dynamics analyses, specifically: Model-free, NMR relaxation (R1, R2, NOE), reduced spectral density mapping, N-state models, frame order theory)."/></a><br/>Mac OS X 10.6 Snow Leopard (terminal)
-       </td>
-       <td class="screenshot_td">
-       </td>
-       <td class="screenshot_td">
-       </td>
-      </tr>
-     </table>
+     <div class="screenshot_grid">
+       <div class="screenshot_grid_item">
+        <a href="images/screenshots/full/prompt_ui_mageia1.png"><img src="images/screenshots/small/prompt_ui_mageia1.png" alt="Screenshot of the prompt user inteface (UI) running on GNU/Linux (Mageia 1) of the program relax (software for NMR dynamics analyses, specifically: Model-free, NMR relaxation (R1, R2, NOE), reduced spectral density mapping, N-state models, frame order theory)."/></a>
+        <br/>GNU/Linux - <a href="http://www.mageia.org">Mageia 1</a> (konsole)
+       </div>
+       <div class="screenshot_grid_item">
+        <a href="images/screenshots/full/prompt_ui_win2000.png"><img src="images/screenshots/small/prompt_ui_win2000.png" alt="Screenshot of the prompt user inteface (UI) running on MS Windows 2000 of the program relax (software for NMR dynamics analyses, specifically: Model-free, NMR relaxation (R1, R2, NOE), reduced spectral density mapping, N-state models, frame order theory)."/></a>
+        <br/>MS Windows 2000 (cmd)
+       </div>
+       <div class="screenshot_grid_item">
+        <a href="images/screenshots/full/prompt_ui_win_vista.png"><img src="images/screenshots/small/prompt_ui_win_vista.png" alt="Screenshot of the prompt user inteface (UI) running on MS Windows Vista of the program relax (software for NMR dynamics analyses, specifically: Model-free, NMR relaxation (R1, R2, NOE), reduced spectral density mapping, N-state models, frame order theory)."/></a>
+        <br/>MS Windows Vista (powershell)
+       </div>
+       <div class="screenshot_grid_item">
+        <a href="images/screenshots/full/prompt_ui_mac_10_6.png"><img src="images/screenshots/small/prompt_ui_mac_10_6.png" alt="Screenshot of the prompt user inteface (UI) running on Mac OS X 10.6 Snow Leopard of the program relax (software for NMR dynamics analyses, specifically: Model-free, NMR relaxation (R1, R2, NOE), reduced spectral density mapping, N-state models, frame order theory)."/></a>
+        <br/>Mac OS X 10.6 Snow Leopard (terminal)
+       </div>
+     </div>
 
   <div id="gui" class="main_h2">
    <h2>GUI screenshots</h2>
@@ -77,61 +73,60 @@
 
     <p>The following are screenshots of <a href="download.html#All_releases">relax 1.3.14</a> in <a href="features.html#UI">GUI mode</a> , showing the different GUI elements and features.  These have been taken on GNU/Linux, specifically <a href="http://www.mageia.org">Mageia 1</a>.  The relax GUI will adapt to the native look and feel of the host operating system, so will have a slightly different appearance on MS Windows and Mac OS X.</p>
 
-     <table class="screenshot_table">
-      <tr>
-       <td class="screenshot_td">
-        <a href="images/screenshots/full/start.png"><img src="images/screenshots/small/start.png" alt="Screenshot of the graphical user inteface (GUI) starting interface of the program relax (software for NMR dynamics analyses, specifically: Model-free, NMR relaxation (R1, R2, NOE), reduced spectral density mapping, N-state models, frame order theory)."/></a><br/>relax starting interface
-       </td>
-       <td class="screenshot_td">
-        <a href="images/screenshots/full/analysis_wizard.png"><img src="images/screenshots/small/analysis_wizard.png" alt="Screenshot of the graphical user inteface (GUI) analysis wizard of the program relax (software for NMR dynamics analyses, specifically: Model-free, NMR relaxation (R1, R2, NOE), reduced spectral density mapping, N-state models, frame order theory)."/></a><br/>The analysis selection wizard
-       </td>
-       <td class="screenshot_td">
-        <a href="images/screenshots/full/analysis_noe.png"><img src="images/screenshots/small/analysis_noe.png" alt="Screenshot of the graphical user inteface (GUI) steady-state NOE anlaysis tab of the program relax (software for NMR dynamics analyses, specifically: Model-free, NMR relaxation (R1, R2, NOE), reduced spectral density mapping, N-state models, frame order theory)."/></a><br/>Steady-state NOE analysis
-       </td>
-      </tr>
-      <tr>
-       <td class="screenshot_td">
-        <a href="images/screenshots/full/analysis_r1.png"><img src="images/screenshots/small/analysis_r1.png" alt="Screenshot of the graphical user inteface (GUI) R1 anlaysis tab of the program relax (software for NMR dynamics analyses, specifically: Model-free, NMR relaxation (R1, R2, NOE), reduced spectral density mapping, N-state models, frame order theory)."/></a><br/>R<sub>1</sub> analysis
-       </td>
-       <td class="screenshot_td">
-        <a href="images/screenshots/full/analysis_r2.png"><img src="images/screenshots/small/analysis_r2.png" alt="Screenshot of the graphical user inteface (GUI) R2 anlaysis tab of the program relax (software for NMR dynamics analyses, specifically: Model-free, NMR relaxation (R1, R2, NOE), reduced spectral density mapping, N-state models, frame order theory)."/></a><br/>R<sub>2</sub> analysis
-       </td>
-       <td class="screenshot_td">
-        <a href="images/screenshots/full/analysis_mf.png"><img src="images/screenshots/small/analysis_mf.png" alt="Screenshot of the graphical user inteface (GUI) model-free anlaysis tab of the program relax (software for NMR dynamics analyses, specifically: Model-free, NMR relaxation (R1, R2, NOE), reduced spectral density mapping, N-state models, frame order theory)."/></a><br/>Model-free analysis
-       </td>
-      </tr>
-      <tr>
-       <td class="screenshot_td">
-        <a href="images/screenshots/full/relax_controller.png"><img src="images/screenshots/small/relax_controller.png" alt="Screenshot of the graphical user inteface (GUI) relax controller of the program relax (software for NMR dynamics analyses, specifically: Model-free, NMR relaxation (R1, R2, NOE), reduced spectral density mapping, N-state models, frame order theory)."/></a><br/>The relax controller
-       </td>
-       <td class="screenshot_td">
-        <a href="images/screenshots/full/spin_viewer.png"><img src="images/screenshots/small/spin_viewer.png" alt="Screenshot of the graphical user inteface (GUI) spin viewer window of the program relax (software for NMR dynamics analyses, specifically: Model-free, NMR relaxation (R1, R2, NOE), reduced spectral density mapping, N-state models, frame order theory)."/></a><br/>Spin viewer window
-       </td>
-       <td class="screenshot_td">
-        <a href="images/screenshots/full/results_viewer.png"><img src="images/screenshots/small/results_viewer.png" alt="Screenshot of the graphical user inteface (GUI) results viewer window of the program relax (software for NMR dynamics analyses, specifically: Model-free, NMR relaxation (R1, R2, NOE), reduced spectral density mapping, N-state models, frame order theory)."/></a><br/>Results viewer window
-       </td>
-      </tr>
-      <tr>
-       <td class="screenshot_td">
-        <a href="images/screenshots/full/pipe_editor.png"><img src="images/screenshots/small/pipe_editor.png" alt="Screenshot of the graphical user inteface (GUI) pipe editor window of the program relax (software for NMR dynamics analyses, specifically: Model-free, NMR relaxation (R1, R2, NOE), reduced spectral density mapping, N-state models, frame order theory)."/></a><br/>Pipe editor window
-       </td>
-       <td class="screenshot_td">
-        <a href="images/screenshots/full/relax_prompt.png"><img src="images/screenshots/small/relax_prompt.png" alt="Screenshot of the graphical user inteface (GUI) relax prompt window of the program relax (software for NMR dynamics analyses, specifically: Model-free, NMR relaxation (R1, R2, NOE), reduced spectral density mapping, N-state models, frame order theory)."/></a><br/>relax prompt window
-       </td>
-       <td class="screenshot_td">
-        <a href="images/screenshots/full/about_gui.png"><img src="images/screenshots/small/about_gui.png" alt="Screenshot of the graphical user inteface (GUI) about GUI screen of the program relax (software for NMR dynamics analyses, specifically: Model-free, NMR relaxation (R1, R2, NOE), reduced spectral density mapping, N-state models, frame order theory)."/></a><br/>About GUI screen
-       </td>
-      </tr>
-      <tr>
-       <td class="screenshot_td">
-        <a href="images/screenshots/full/about_relax.png"><img src="images/screenshots/small/about_relax.png" alt="Screenshot of the graphical user inteface (GUI) about relax screen of the program relax (software for NMR dynamics analyses, specifically: Model-free, NMR relaxation (R1, R2, NOE), reduced spectral density mapping, N-state models, frame order theory)."/></a><br/>About relax screen
-       </td>
-       <td class="screenshot_td">
-       </td>
-       <td class="screenshot_td">
-       </td>
-      </tr>
-     </table>
+     <div class="screenshot_grid">
+       <div class="screenshot_grid_item">
+        <a href="images/screenshots/full/start.png"><img src="images/screenshots/small/start.png" alt="Screenshot of the graphical user inteface (GUI) starting interface of the program relax (software for NMR dynamics analyses, specifically: Model-free, NMR relaxation (R1, R2, NOE), reduced spectral density mapping, N-state models, frame order theory)."/></a>
+        <br/>relax starting interface
+       </div>
+       <div class="screenshot_grid_item">
+        <a href="images/screenshots/full/analysis_wizard.png"><img src="images/screenshots/small/analysis_wizard.png" alt="Screenshot of the graphical user inteface (GUI) analysis wizard of the program relax (software for NMR dynamics analyses, specifically: Model-free, NMR relaxation (R1, R2, NOE), reduced spectral density mapping, N-state models, frame order theory)."/></a>
+        <br/>The analysis selection wizard
+       </div>
+       <div class="screenshot_grid_item">
+        <a href="images/screenshots/full/analysis_noe.png"><img src="images/screenshots/small/analysis_noe.png" alt="Screenshot of the graphical user inteface (GUI) steady-state NOE anlaysis tab of the program relax (software for NMR dynamics analyses, specifically: Model-free, NMR relaxation (R1, R2, NOE), reduced spectral density mapping, N-state models, frame order theory)."/></a>
+        <br/>Steady-state NOE analysis
+       </div>
+       <div class="screenshot_grid_item">
+        <a href="images/screenshots/full/analysis_r1.png"><img src="images/screenshots/small/analysis_r1.png" alt="Screenshot of the graphical user inteface (GUI) R1 anlaysis tab of the program relax (software for NMR dynamics analyses, specifically: Model-free, NMR relaxation (R1, R2, NOE), reduced spectral density mapping, N-state models, frame order theory)."/></a>
+        <br/>R<sub>1</sub> analysis
+       </div>
+       <div class="screenshot_grid_item">
+        <a href="images/screenshots/full/analysis_r2.png"><img src="images/screenshots/small/analysis_r2.png" alt="Screenshot of the graphical user inteface (GUI) R2 anlaysis tab of the program relax (software for NMR dynamics analyses, specifically: Model-free, NMR relaxation (R1, R2, NOE), reduced spectral density mapping, N-state models, frame order theory)."/></a>
+        <br/>R<sub>2</sub> analysis
+       </div>
+       <div class="screenshot_grid_item">
+        <a href="images/screenshots/full/analysis_mf.png"><img src="images/screenshots/small/analysis_mf.png" alt="Screenshot of the graphical user inteface (GUI) model-free anlaysis tab of the program relax (software for NMR dynamics analyses, specifically: Model-free, NMR relaxation (R1, R2, NOE), reduced spectral density mapping, N-state models, frame order theory)."/></a>
+        <br/>Model-free analysis
+       </div>
+       <div class="screenshot_grid_item">
+        <a href="images/screenshots/full/relax_controller.png"><img src="images/screenshots/small/relax_controller.png" alt="Screenshot of the graphical user inteface (GUI) relax controller of the program relax (software for NMR dynamics analyses, specifically: Model-free, NMR relaxation (R1, R2, NOE), reduced spectral density mapping, N-state models, frame order theory)."/></a>
+        <br/>The relax controller
+       </div>
+       <div class="screenshot_grid_item">
+        <a href="images/screenshots/full/spin_viewer.png"><img src="images/screenshots/small/spin_viewer.png" alt="Screenshot of the graphical user inteface (GUI) spin viewer window of the program relax (software for NMR dynamics analyses, specifically: Model-free, NMR relaxation (R1, R2, NOE), reduced spectral density mapping, N-state models, frame order theory)."/></a>
+        <br/>Spin viewer window
+       </div>
+       <div class="screenshot_grid_item">
+        <a href="images/screenshots/full/results_viewer.png"><img src="images/screenshots/small/results_viewer.png" alt="Screenshot of the graphical user inteface (GUI) results viewer window of the program relax (software for NMR dynamics analyses, specifically: Model-free, NMR relaxation (R1, R2, NOE), reduced spectral density mapping, N-state models, frame order theory)."/></a>
+        <br/>Results viewer window
+       </div>
+       <div class="screenshot_grid_item">
+        <a href="images/screenshots/full/pipe_editor.png"><img src="images/screenshots/small/pipe_editor.png" alt="Screenshot of the graphical user inteface (GUI) pipe editor window of the program relax (software for NMR dynamics analyses, specifically: Model-free, NMR relaxation (R1, R2, NOE), reduced spectral density mapping, N-state models, frame order theory)."/></a>
+        <br/>Pipe editor window
+       </div>
+       <div class="screenshot_grid_item">
+        <a href="images/screenshots/full/relax_prompt.png"><img src="images/screenshots/small/relax_prompt.png" alt="Screenshot of the graphical user inteface (GUI) relax prompt window of the program relax (software for NMR dynamics analyses, specifically: Model-free, NMR relaxation (R1, R2, NOE), reduced spectral density mapping, N-state models, frame order theory)."/></a>
+        <br/>relax prompt window
+       </div>
+       <div class="screenshot_grid_item">
+        <a href="images/screenshots/full/about_gui.png"><img src="images/screenshots/small/about_gui.png" alt="Screenshot of the graphical user inteface (GUI) about GUI screen of the program relax (software for NMR dynamics analyses, specifically: Model-free, NMR relaxation (R1, R2, NOE), reduced spectral density mapping, N-state models, frame order theory)."/></a>
+        <br/>About GUI screen
+       </div>
+       <div class="screenshot_grid_item">
+        <a href="images/screenshots/full/about_relax.png"><img src="images/screenshots/small/about_relax.png" alt="Screenshot of the graphical user inteface (GUI) about relax screen of the program relax (software for NMR dynamics analyses, specifically: Model-free, NMR relaxation (R1, R2, NOE), reduced spectral density mapping, N-state models, frame order theory)."/></a>
+        <br/>About relax screen
+       </div>
+     </div>
 
   </div>
  </div>
